task-calculator-K8s/K8s/frontend-server-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-server
  template:
    metadata:
      labels:
        app: frontend-server
    spec:
      containers:
        - name: frontend-server
          image: sizhewang0916/sit323-task-calculator:frontend
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-server
spec:
  type: ClusterIP
  selector:
    app: frontend-server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
